Cleanup code + fix wrapping pre

--- a/src/app.css
+++ b/src/app.css
@@ -40,3 +40,7 @@ ol, ul {
 .glow-container {
   display: inline-block;
 }
+
+.marked-container pre {
+  white-space: pre-wrap;
+}
